more intro fixup

--- a/bio1m.bib
+++ b/bio1m.bib
@@ -1345,6 +1345,15 @@ urldate = {2014-11-09},
 	month = jun,
 	year = {2013},
 	keywords = {Atmospheric science, Biogeochemistry, Climate-change mitigation, Climate-change policy},
-	pages = {552--557},
-	file = {Full Text PDF:/Users/bolker/Library/Application Support/Firefox/Profiles/rxerw03y.default/zotero/storage/ZKIN9PIS/Mackey et al. - 2013 - Untangling the confusion around land carbon scienc.pdf:application/pdf;Snapshot:/Users/bolker/Library/Application Support/Firefox/Profiles/rxerw03y.default/zotero/storage/F48G82ET/nclimate1804.html:text/html}
+	pages = {552--557}
 }
+
+@ARTICLE{Hurlbert1984,
+  author = {S. Hurlbert},
+  title = {Pseudoreplication and the Design of Ecological Field Experiments},
+  journal = {Ecological Monographs},
+  year = {1984},
+  volume = {54},
+  pages = {187-211}
+}
+
