working on intro slides

--- a/bio1m.bib
+++ b/bio1m.bib
@@ -1357,3 +1357,38 @@ urldate = {2014-11-09},
   pages = {187-211}
 }
 
+@article{peper_note_1978,
+	title = {Note taking as a generative activity.},
+	volume = {70},
+	number = {4},
+	journal = {Journal of Educational Psychology},
+	author = {Peper, Richard J. and Mayer, Richard E.},
+	year = {1978},
+	pages = {514}
+}
+
+@article{bui_note-taking_2013,
+	title = {Note-taking with computers: {Exploring} alternative strategies for improved recall.},
+	volume = {105},
+	shorttitle = {Note-taking with computers},
+	number = {2},
+	journal = {Journal of Educational Psychology},
+	author = {Bui, Dung C. and Myerson, Joel and Hale, Sandra},
+	year = {2013},
+	pages = {299}
+}
+
+
+@book{collins_golem_2012,
+	title = {The {Golem}: {What} {You} {Should} {Know} {About} {Science}},
+	isbn = {978-1-107-60465-0},
+	shorttitle = {The {Golem}},
+	abstract = {Harry Collins and Trevor Pinch liken science to the Golem, a creature from Jewish mythology, powerful yet potentially dangerous, a gentle, helpful creature that may yet run amok at any moment. Through a series of intriguing case studies the authors debunk the traditional view that science is the straightforward result of competent theorisation, observation and experimentation. The very well-received first edition generated much debate, reflected in a substantial new Afterword in this second edition, which seeks to place the book in what have become known as 'the science wars'.},
+	language = {en},
+	publisher = {Cambridge University Press},
+	author = {Collins, Harry M. and Pinch, Trevor and Pinch, Trevor J.},
+	month = mar,
+	year = {2012},
+	note = {Google-Books-ID: TCFI7vp7dJ4C},
+	keywords = {Science / History}
+}
