working on intro, machinery

--- a/bio1m.bib
+++ b/bio1m.bib
@@ -1392,3 +1392,24 @@ urldate = {2014-11-09},
 	note = {Google-Books-ID: TCFI7vp7dJ4C},
 	keywords = {Science / History}
 }
+
+
+@article{wittlinger_ant_2006,
+	title = {The {Ant} {Odometer}: {Stepping} on {Stilts} and {Stumps}},
+	volume = {312},
+	journal = {Science},
+	author = {Matthias Wittlinger and Rüdiger Wehner and Harald Wolf},
+	month = jun,
+	year = {2006},
+	pages = {1965--1967}
+}
+
+
+@book{kipling_just_1902,
+	title = {Just {So} {Stories}},
+	url = {https://www.gutenberg.org/files/2781/2781-h/2781-h.htm},
+	abstract = {The stories, first published in 1902, are pourquoi stories, fantastic accounts of how various phenomena came about. A forerunner of these stories is "How Fear Came" in The Second Jungle Book (1895), in which Mowgli hears the story of how the tiger got his stripes.},
+	language = {English},
+	author = {Kipling, Rudyard},
+	year = {1902}
+}
