working on intro/ns

--- a/bio1m.bib
+++ b/bio1m.bib
@@ -1413,3 +1413,21 @@ urldate = {2014-11-09},
 	author = {Kipling, Rudyard},
 	year = {1902}
 }
+
+
+@article{simmons_necks-for-sex_2010,
+	title = {Necks-for-sex or competing browsers? {A} critique of ideas on the evolution of giraffe: {Giraffid} evolution revisited},
+	volume = {282},
+	issn = {09528369},
+	shorttitle = {Necks-for-sex or competing browsers?},
+	url = {http://doi.wiley.com/10.1111/j.1469-7998.2010.00711.x},
+	doi = {10.1111/j.1469-7998.2010.00711.x},
+	language = {en},
+	number = {1},
+	urldate = {2018-01-02},
+	journal = {Journal of Zoology},
+	author = {Simmons, R. E. and Altwegg, R.},
+	month = sep,
+	year = {2010},
+	pages = {6--12}
+}
