working on everything ...

--- a/bio1m.bib
+++ b/bio1m.bib
@@ -1378,7 +1378,6 @@ urldate = {2014-11-09},
 	pages = {299}
 }
 
-
 @book{collins_golem_2012,
 	title = {The {Golem}: {What} {You} {Should} {Know} {About} {Science}},
 	isbn = {978-1-107-60465-0},
@@ -1430,4 +1429,36 @@ urldate = {2014-11-09},
 	month = sep,
 	year = {2010},
 	pages = {6--12}
+}
+
+
+@book{waller_fabulous_2005,
+	address = {Oxford},
+	title = {Fabulous {Science}: {Fact} and {Fiction} in the {History} of {Scientific} {Discovery}},
+	isbn = {978-0-19-860939-1},
+	shorttitle = {Fabulous {Science}},
+	abstract = {The great biologist Louis Pasteur suppressed 'awkward' data because it didn't support the case he was making. John Snow, the 'first epidemiologist' was doing nothing others had not done before. Gregor Mendel, the supposed 'founder of genetics' never grasped the fundamental principles of 'Mendelian' genetics. Joseph Lister's famously clean hospital wards were actually notorious dirty. And Einstein's general relativity was only 'confirmed' in 1919 because an eminent British scientist cooked his figures. These are just some of the revelations explored in this book. Drawing on current history of science scholarship, "Fabulous Science" shows that many of our greatest heroes of science were less than honest about their experimental data and not above using friends in high places to help get their ideas accepted. It also reveals that the alleged revolutionaries of the history of science were often nothing of the sort. Prodigiously able they may have been, but the epithet of the 'man before his time' usually obscures vital contributions made their unsung contemporaries and the intrinsic merits of ideas they overturned. These distortions of the historical record mostly arise from our tendency to read the present back into the past. But in many cases, scientists owe their immortality to a combination of astonishing effrontery and their skills as self-promoters.},
+	language = {English},
+	publisher = {Oxford University Press},
+	author = {Waller, John},
+	month = dec,
+	year = {2005}
+}
+
+
+@article{chen_homologous_1986,
+	title = {Homologous ribosomal proteins in bacteria, yeast, and humans},
+	volume = {83},
+	issn = {0027-8424},
+	abstract = {We describe sequences of two human ribosomal proteins, S14 and S17, and messenger RNAs that encode them. cDNAs were used as molecular hybridization probes to recognize complementary genes in rodent, Drosophila, and yeast chromosomal DNAs. Human ribosomal protein sequences are compared to analogous Chinese hamster, yeast, and bacterial genes. Our observations suggest that some ribosomal protein genes have been conserved stringently in the several phylogenetic lines examined. These genes apparently were established early in evolution and encode products that are fundamental to the translational apparatus. Other ribosomal protein genes examined, although similar enough to heterologous DNA sequences to indicate their structural relationships, appear to have diverged substantially during evolution, probably reflecting adaptations to different genetic environments.},
+	language = {eng},
+	number = {18},
+	journal = {Proceedings of the National Academy of Sciences of the United States of America},
+	author = {Chen, I. T. and Dixit, A. and Rhoads, D. D. and Roufa, D. J.},
+	month = sep,
+	year = {1986},
+	pmid = {3529092},
+	pmcid = {PMC386619},
+	keywords = {Biological Evolution, Amino Acid Sequence, Cricetinae, Humans, DNA, Animals, Base Sequence, Escherichia coli, Protein Biosynthesis, Ribosomal Proteins, Yeasts},
+	pages = {6907--6911}
 }
