ns slides (working)

--- a/bio1m.bib
+++ b/bio1m.bib
@@ -1462,3 +1462,37 @@ urldate = {2014-11-09},
 	keywords = {Biological Evolution, Amino Acid Sequence, Cricetinae, Humans, DNA, Animals, Base Sequence, Escherichia coli, Protein Biosynthesis, Ribosomal Proteins, Yeasts},
 	pages = {6907--6911}
 }
+
+
+@article{foo_evolution_2014,
+	title = {Evolution of acquired resistance to anti-cancer therapy},
+	volume = {0},
+	url = {https://www.ncbi.nlm.nih.gov/pmc/articles/PMC4058397/},
+	doi = {10.1016/j.jtbi.2014.02.025},
+	abstract = {Acquired drug resistance is a major limitation for the successful treatment of cancer. Resistance can emerge due to a variety of reasons including host environmental factors as well as genetic or epigenetic alterations in the cancer cells. Evolutionary ...},
+	language = {en},
+	urldate = {2018-01-04},
+	journal = {Journal of theoretical biology},
+	author = {Foo, Jasmine and Michor, Franziska},
+	month = aug,
+	year = {2014},
+	pmid = {24681298},
+	pages = {10}
+}
+
+
+@article{bifani_origin_1996,
+	title = {Origin and Interstate Spread of a {New} {York} {City} Multidrug-Resistant {{\em Mycobacterium tuberculosis}} Clone Family},
+	volume = {275},
+	issn = {0098-7484},
+	url = {https://jamanetwork.com/journals/jama/fullarticle/396237},
+	doi = {10.1001/jama.1996.03530300036037},
+	abstract = {{\textless}h3{\textgreater}Objective.{\textless}/h3{\textgreater}{\textless}p{\textgreater}—To determine whether isolates of\textit{Mycobacterium tuberculosis}from New York and elsewhere that are resistant to four or more primary antimicrobial agents and responsible for widespread disease in the 1990s represent a newly emerged clone or a heterogeneous array of unrelated organisms.{\textless}/p{\textgreater}{\textless}h3{\textgreater}Setting.{\textless}/h3{\textgreater}{\textless}p{\textgreater}—New York City area and selected locations in the United States.{\textless}/p{\textgreater}{\textless}h3{\textgreater}Patients.{\textless}/h3{\textgreater}{\textless}p{\textgreater}—\textit{M tuberculosis}isolates from 1953 patients in New York and multidrug-resistant isolates from six patients from other US communities.{\textless}/p{\textgreater}{\textless}h3{\textgreater}Design.{\textless}/h3{\textgreater}{\textless}p{\textgreater}—Convenience sample of all\textit{M tuberculosis}strains (\textit{M tuberculosis}isolates resistant to rifampin, streptomycin, isoniazid, and ethambutol, and sometimes ethionamide, kanamycin, capreomycin, or ciprofloxacin) submitted to the Public Health Research Institute Tuberculosis Center since 1991 and samples submitted to the Centers for Disease Control and Prevention from throughout the United States. The samples submitted were representative of the New York City strains of\textit{M tuberculosis}.{\textless}/p{\textgreater}{\textless}h3{\textgreater}Main Outcome Measure.{\textless}/h3{\textgreater}{\textless}p{\textgreater}—Characterization of resistant\textit{M tuberculosis}strains studied by IS\textit{61 10}and polymorphic GC-rich repetitive sequence (PGRS) hybridization patterns, multiplex polymerase chain reaction (PCR) analysis, and automated DNA sequencing of genes containing mutations associated with resistance to rifampin (\textit{rpoB}), isoniazid (\textit{katG}and\textit{inhA}locus), and streptomycin (\textit{strA}and\textit{rrs}).{\textless}/p{\textgreater}{\textless}h3{\textgreater}Results.{\textless}/h3{\textgreater}{\textless}p{\textgreater}—Multidrung-resistant\textit{M tuberculosis}isolates were recovered from 253 New York City patients and had the same or closely allied IS\textit{6110}and PGRS patterns, multiplex PCR type, and gene mutations associated with resistance to rifampin, isoniazid, and streptomycin. Isolates with these same molecular characteristics were recovered from patients in Florida and Nevada, health care workers in Atlanta, Ga, and Miami, Fla, and an individual who recently moved from New York City to Denver, Colo, and caused disease or skin test conversion in at least 12 people in a nursing home environment.{\textless}/p{\textgreater}{\textless}h3{\textgreater}Conclusions.{\textless}/h3{\textgreater}{\textless}p{\textgreater}—The results document the molecular origin and spread of progeny of a closely related family of multidrug-resistant\textit{M tuberculosis}strains that have recently shared a common ancestor and undergone clonal expansion. The multidrug-resistant phenotype in these organisms arose by sequential acquisition of resistance-conferring mutations in several genes, most likely as a consequence of antibiotic selection of randomly occurring mutants in concert with inadequately treated infections. Dissemination of these difficult-to-treat bacteria throughout New York City and to at least four additional US cities has adverse implications for tuberculosis control in the 21st century.{\textless}/p{\textgreater}{\textless}p{\textgreater}(\textit{JAMA}. 1996;275:452-457){\textless}/p{\textgreater}},
+	number = {6},
+	urldate = {2018-01-05},
+	journal = {JAMA},
+	author = {Bifani, Pablo J. and Plikaytis, Bonnie B. and Kapur, Vivek and Stockbauer, Kathryn and Pan, Xi and Lutfey, Michael L. and Moghazeh, Soraya L. and Eisner, William and Daniel, Thomas M. and Kaplan, Mark H. and Crawford, Jack T. and Musser, James M. and Kreiswirth, Barry N.},
+	month = feb,
+	year = {1996},
+	pages = {452--457}
+}
