--- a/bio1m.bib
+++ b/bio1m.bib
@@ -1496,3 +1496,16 @@ urldate = {2014-11-09},
 	year = {1996},
 	pages = {452--457}
 }
+
+
+@book{bonner_evolution_1988,
+	address = {Princeton, N.J},
+	title = {The {Evolution} of {Complexity} by {Means} of {Natural} {Selection}},
+	isbn = {978-0-691-08494-7},
+	abstract = {John Tyler Bonner makes a new attack on an old problem: the question of how progressive increase in the size and complexity of animals and plants has occurred. "How is it," he inquires, "that an egg turns into an elaborate adult? How is it that a bacterium, given many millions of years, could have evolved into an elephant?" The author argues that we can understand this progression in terms of natural selection, but that in order to do so we must consider the role of development--or more precisely the role of life cycles--in evolutionary change. In a lively writing style that will be familiar to readers of his work The Evolution of Culture in Animals (Princeton, 1980), Bonner addresses a general audience interested in biology, as well as specialists in all areas of evolutionary biology. What is novel in the approach used here is the comparison of complexity inside the organism (especially cell differentiation) with the complexity outside (that is, within an ecological community). Matters of size at both these levels are closely related to complexity. The book shows how an understanding of the grand course of evolution can come from combining our knowledge of genetics, development, ecology, and even behavior.},
+	language = {English},
+	publisher = {Princeton University Press},
+	author = {Bonner, John Tyler},
+	month = aug,
+	year = {1988}
+}
