machinery + ns changes

--- a/bio1m.bib
+++ b/bio1m.bib
@@ -1509,3 +1509,13 @@ urldate = {2014-11-09},
 	month = aug,
 	year = {1988}
 }
+
+
+@article{freeman_regions_2009,
+	title = {Region's black squirrels offer genetics lesson},
+        year=2009,
+	url = {http://www.masslive.com/news/index.ssf/2009/02/regions_black_squirrels_offer.html},
+	urldate = {2018-01-07},
+	journal = {The Republican},
+	author = {Stan Freeman}
+}
