--- a/bio1m.bib
+++ b/bio1m.bib
@@ -1519,3 +1519,16 @@ urldate = {2014-11-09},
 	journal = {The Republican},
 	author = {Stan Freeman}
 }
+
+@article{hardy_mendelian_1908,
+	title = {Mendelian {Proportions} in a {Mixed} {Population}},
+	volume = {28},
+	issn = {0036-8075},
+	url = {http://www.jstor.org/stable/1636004},
+	number = {706},
+	urldate = {2018-01-10},
+	journal = {Science},
+	author = {Hardy, G. H.},
+	year = {1908},
+	pages = {49--50}
+}
