--- a/bio1m.bib
+++ b/bio1m.bib
@@ -1532,3 +1532,28 @@ urldate = {2014-11-09},
 	year = {1908},
 	pages = {49--50}
 }
+
+
+@article{tucker_apostatic_1991,
+	title = {Apostatic selection by song thrushes ({Turdus} philomelos) feeding on the snail {Cepaea} hortensis},
+	volume = {43},
+	number = {2},
+	journal = {Biological Journal of the Linnean Society},
+	author = {Tucker, Graham M.},
+	year = {1991},
+	pages = {149--156}
+}
+
+
+@article{mosley_extraordinary_2015,
+	chapter = {Magazine},
+	title = {The extraordinary case of the {Guevedoces}},
+	url = {http://www.bbc.co.uk/news/magazine-34290981},
+	abstract = {Children in a remote village in the Dominican Republic have an extremely unusual condition.},
+	language = {en-GB},
+	urldate = {2018-01-11},
+	journal = {BBC News},
+	author = {Mosley, Michael},
+	month = sep,
+	year = {2015}
+}
