too much at once

--- a/bio1m.bib
+++ b/bio1m.bib
@@ -1557,3 +1557,24 @@ urldate = {2014-11-09},
 	month = sep,
 	year = {2015}
 }
+
+
+@article{koster_darwins_1985,
+	title = {Darwin's finch "ploughs" for water},
+	volume = {41},
+	journal = {Noticias de Galapagos},
+	author = {Koster, Friedemann},
+	year = {1985},
+	pages = {23--24}
+}
+
+@article{estes_darwin_2000,
+	title = {Darwin in the {Galapagos}: his footsteps through the archipelago},
+	volume = {54},
+	shorttitle = {Darwin in the {Galapagos}},
+	number = {3},
+	journal = {Notes and Records of the Royal Society},
+	author = {Estes, Gregory and Grant, K. Thalia and Grant, Peter R.},
+	year = {2000},
+	pages = {343--368}
+}
