working on phylogeny chap

--- a/bio1m.bib
+++ b/bio1m.bib
@@ -1578,3 +1578,33 @@ urldate = {2014-11-09},
 	year = {2000},
 	pages = {343--368}
 }
+
+
+@article{lanyon_hybrid_1979,
+	title = {Hybrid sterility in meadowlarks},
+	volume = {279},
+	copyright = {1979 Nature Publishing Group},
+	issn = {1476-4687},
+	url = {https://www.nature.com/articles/279557a0},
+	doi = {10.1038/279557a0},
+	abstract = {Hybrid sterility in meadowlarks},
+	language = {En},
+	number = {5713},
+	urldate = {2018-01-18},
+	journal = {Nature},
+	author = {Lanyon, Wesley E.},
+	month = jun,
+	year = {1979},
+	pages = {557},
+	file = {Snapshot:/home/bolker/.mozilla/firefox/f2nw6467.default/zotero/storage/ITWMTH2V/279557a0.html:text/html}
+}
+
+@article{barlow_song_1994,
+	title = {P50: {Song} {Structure} and {Speciation} in {Meadowlarks}},
+	volume = {Selected Contributions from the 21st International Ornithological Congress Systematics and Evolution of Birds: Phylogeny},
+	shorttitle = {28 {Systematics} and {Evolution} of {Birds}},
+	doi = {10.1007/BF02445751},
+	journal = {Research Notes on Avian Biology},
+	author = {Barlow, John C. and McGillivray, Bruce W. and Dickinson, Tom},
+	year = {1994}
+}
