add to bib file

--- a/bio1m.bib
+++ b/bio1m.bib
@@ -1608,3 +1608,158 @@ urldate = {2014-11-09},
 	author = {Barlow, John C. and McGillivray, Bruce W. and Dickinson, Tom},
 	year = {1994}
 }
+
+
+@article{smets_horizontal_2005,
+	title = {Horizontal gene transfer: perspectives at a crossroads of scientific disciplines},
+	volume = {3},
+	copyright = {2005 Nature Publishing Group},
+	shorttitle = {Horizontal gene transfer},
+	url = {https://www.nature.com/articles/nrmicro1253},
+	doi = {10.1038/nrmicro1253},
+	abstract = {Horizontal gene transfer: perspectives at a crossroads of scientific disciplines},
+	language = {En},
+	urldate = {2018-01-24},
+	journal = {Nature Reviews Microbiology},
+	author = {Smets, Barth F. and Barkay, Tamar},
+	month = sep,
+	year = {2005},
+	note = {DOI: 10.1038/nrmicro1253},
+	pages = {675--678}
+}
+
+
+@article{ledford_amber_2007,
+	title = {Amber preserves rare orchid pollen},
+	copyright = {© 2007 Nature Publishing Group},
+	issn = {1744-7933},
+	url = {http://www.nature.com/news/2007/070829/full/news070827-4.html},
+	doi = {10.1038/news070827-4},
+	abstract = {Nature - the world's best science and medicine on your desktop},
+	language = {en},
+	urldate = {2018-01-25},
+	journal = {Nature News},
+	author = {Ledford, Heidi},
+	month = aug,
+	year = {2007}
+}
+
+
+@article{ramirez_dating_2007,
+	title = {Dating the origin of the {Orchidaceae} from a fossil orchid with its pollinator},
+	volume = {448},
+	issn = {0028-0836, 1476-4687},
+	url = {http://www.nature.com/doifinder/10.1038/nature06039},
+	doi = {10.1038/nature06039},
+	number = {7157},
+	urldate = {2018-01-25},
+	journal = {Nature},
+	author = {Ramírez, Santiago R. and Gravendeel, Barbara and Singer, Rodrigo B. and Marshall, Charles R. and Pierce, Naomi E.},
+	month = aug,
+	year = {2007},
+	pages = {1042--1045},
+	file = {nature06039.pdf:/home/bolker/.mozilla/firefox/f2nw6467.default/zotero/storage/8F6U4CXU/nature06039.pdf:application/pdf}
+}
+
+@article{da_fontoura_budaszewski_morbillivirus_2016,
+	title = {Morbillivirus {Experimental} {Animal} {Models}: {Measles} {Virus} {Pathogenesis} {Insights} from {Canine} {Distemper} {Virus}},
+	volume = {8},
+	copyright = {http://creativecommons.org/licenses/by/3.0/},
+	shorttitle = {Morbillivirus {Experimental} {Animal} {Models}},
+	url = {http://www.mdpi.com/1999-4915/8/10/274},
+	doi = {10.3390/v8100274},
+	abstract = {Morbilliviruses share considerable structural and functional similarities. Even though disease severity varies among the respective host species, the underlying pathogenesis and the clinical signs are comparable. Thus, insights gained with one morbillivirus often apply to the other members of the genus. Since the Canine distemper virus (CDV) causes severe and often lethal disease in dogs and ferrets, it is an attractive model to characterize morbillivirus pathogenesis mechanisms and to evaluate the efficacy of new prophylactic and therapeutic approaches. This review compares the cellular tropism, pathogenesis, mechanisms of persistence and immunosuppression of the Measles virus (MeV) and CDV. It then summarizes the contributions made by studies on the CDV in dogs and ferrets to our understanding of MeV pathogenesis and to vaccine and drugs development.},
+	language = {en},
+	number = {10},
+	urldate = {2018-01-25},
+	journal = {Viruses},
+	author = {{da Fontoura Budaszewski}, Renata and von Messling, Veronika},
+	month = oct,
+	year = {2016},
+	keywords = {animal models, canine distemper virus, morbillivirus genus, pathogenesis},
+	pages = {274}
+}
+
+
+@article{sealey_adaptive_2013,
+	title = {Adaptive radiation within the vaccine target tetraspanin-23 across nine {Schistosoma} species from {Africa}},
+	volume = {43},
+	issn = {00207519},
+	url = {http://linkinghub.elsevier.com/retrieve/pii/S0020751912003086},
+	doi = {10.1016/j.ijpara.2012.11.007},
+	language = {en},
+	number = {1},
+	urldate = {2018-01-29},
+	journal = {International Journal for Parasitology},
+	author = {Sealey, Katie L. and Kirk, Ruth S. and Walker, Anthony J. and Rollinson, David and Lawton, Scott P.},
+	month = jan,
+	year = {2013},
+	pages = {95--103}
+}
+
+
+@book{combes_parasitism_2004,
+	address = {Chicago},
+	title = {Parasitism: {The} {Ecology} and {Evolution} of {Intimate} {Interactions}},
+	isbn = {978-0-226-11446-0},
+	shorttitle = {Parasitism},
+	abstract = {In Parasitism, Claude Combes explores the fascinating adaptations parasites have developed through their intimate interactions with their hosts. He begins with the biology of parasites—their life cycles, habitats, and different types of associations with their hosts. Next he discusses genetic interactions between hosts and parasites, and he ends with a section on the community ecology of parasites and their role in the evolution of their hosts. Throughout the book Combes enlivens his discussion with a wealth of concrete examples of host-parasite interactions.},
+	language = {English},
+	publisher = {University of Chicago Press},
+	author = {Combes, Claude},
+	translator = {Buron, Isaure de and Connors, Vincent A.},
+	month = oct,
+	year = {2004}
+}
+
+
+@article{crellen_whole_2016,
+	title = {Whole genome resequencing of the human parasite {Schistosoma} mansoni reveals population history and effects of selection},
+	volume = {6},
+	issn = {2045-2322},
+	url = {http://www.nature.com/articles/srep20954},
+	doi = {10.1038/srep20954},
+	language = {en},
+	number = {1},
+	urldate = {2018-01-29},
+	journal = {Scientific Reports},
+	author = {Crellen, Thomas and Allan, Fiona and David, Sophia and Durrant, Caroline and Huckvale, Thomas and Holroyd, Nancy and Emery, Aidan M. and Rollinson, David and Aanensen, David M. and Berriman, Matthew and Webster, Joanne P. and Cotton, James A.},
+	month = aug,
+	year = {2016}
+}
+
+
+@article{heymann_florivory_2011,
+	title = {Florivory, nectarivory, and pollination: a review of primate-flower interactions},
+	volume = {17},
+	journal = {Ecotropica},
+	author = {Heymann, Eckhard W.},
+	year = {2011},
+	pages = {41--52}
+}
+
+@misc{douglass_animals_2015,
+	title = {Animals you might not know pollinate flowers},
+	url = {http://www.bbc.com/earth/story/20150514-extraordinary-pollinators},
+	abstract = {The reptiles, birds and mammals that you might not know pollinate flowers},
+	language = {en},
+	urldate = {2018-02-01},
+	journal = {BBC Earth},
+	author = {Douglass, Michelle},
+	month = may,
+	year = {2015}
+}
+
+
+@book{pollan_botany_2002,
+	address = {New York, NY},
+	title = {The {Botany} of {Desire}: {A} {Plant}'s-{Eye} {View} of the {World}},
+	isbn = {978-0-375-76039-6},
+	shorttitle = {The {Botany} of {Desire}},
+	abstract = {The book that helped make Michael Pollan, the New York Times bestselling author of Cooked and The Omnivore’s Dilemma, one of the most trusted food experts in AmericaEvery schoolchild learns about the mutually beneficial dance of honeybees and flowers: The bee collects nectar and pollen to make honey and, in the process, spreads the flowers’ genes far and wide. In The Botany of Desire, Michael Pollan ingeniously demonstrates how people and domesticated plants have formed a similarly reciprocal relationship. He masterfully links four fundamental human desires—sweetness, beauty, intoxication, and control—with the plants that satisfy them: the apple, the tulip, marijuana, and the potato. In telling the stories of four familiar species, Pollan illustrates how the plants have evolved to satisfy humankind’s most basic yearnings. And just as we’ve benefited from these plants, we have also done well by them. So who is really domesticating whom?},
+	language = {English},
+	publisher = {Random House Trade Paperbacks},
+	author = {Pollan, Michael},
+	month = may,
+	year = {2002}
+}
